[workspace]
resolver = "3"
members = [
    "src",
    "src/common",
    "src/memory",
    "src/memory/endianness",
    "src/memory/bitstream",
    "src/memory/bitvacuumer",
    "src/memory/bitstreamcache",
]

[workspace.package]
version = "0.1.0"
authors = ["Roman Lebedev <lebedev.ri@gmail.com>"]
edition = "2024"
rust-version = "1.87"  # MSRV:1
documentation = "https://rawspeed.rs"
homepage = "https://rawspeed.rs"
repository = "https://github.com/darktable-org/rawspeed.rs"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unsafe_code = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
pedantic = { level = "allow", priority = -1 }
restriction = { level = "allow", priority = -1 }
nursery = { level = "allow", priority = -1 }
cargo = { level = "warn", priority = -1 }

cargo_common_metadata = { level = "allow", priority = 0 }
cognitive_complexity = { level = "warn", priority = 0 }
large_stack_frames = { level = "warn", priority = 0 }
missing_const_for_fn = { level = "warn", priority = 0 }
elidable_lifetime_names = { level = "warn", priority = 0 }
manual_assert = { level = "warn", priority = 0 }
must_use_candidate = { level = "warn", priority = 0 }
semicolon_if_nothing_returned = { level = "warn", priority = 0 }
manual_let_else = { level = "warn", priority = 0 }
match_wild_err_arm = { level = "warn", priority = 0 }
return_self_not_must_use = { level = "warn", priority = 0 }
checked_conversions = { level = "warn", priority = 0 }

[profile.release]
panic = 'abort'
