[workspace]
resolver = "3"
members = [
    "src",
    "src/common",
    "src/memory",
    "src/memory/endianness",
    "src/memory/bitstream",
    "src/memory/bitvacuumer",
    "src/memory/bitstreamcache",
    "src/memory/bitstreamer",
    "src/memory/variable_length_load",
    "src/memory/bytevacuumer",
    "src/memory/bytestreamer",
    "src/misc/md5",
]

[workspace.package]
version = "0.1.0"
authors = ["Roman Lebedev <lebedev.ri@gmail.com>"]
edition = "2024"
rust-version = "1.88"
documentation = "https://rawspeed.rs"
homepage = "https://rawspeed.rs"
repository = "https://github.com/darktable-org/rawspeed.rs"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
warnings = { level = "warn", priority = -1 }
deprecated_safe = { level = "warn", priority = -1 }
future_incompatible = { level = "warn", priority = -1 }
keyword_idents = { level = "warn", priority = -1 }
let_underscore = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
refining_impl_trait = { level = "warn", priority = -1 }
rust_2018_compatibility = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }
unused = { level = "warn", priority = -1 }

unused_qualifications = { level = "warn", priority = -1 }
deprecated_in_future = { level = "warn", priority = -1 }
non_ascii_idents = { level = "warn", priority = -1 }
deref_into_dyn_supertrait = { level = "warn", priority = -1 }
ambiguous_negative_literals = { level = "warn", priority = -1 }
unused_import_braces = { level = "warn", priority = -1 }
unit_bindings = { level = "warn", priority = -1 }
unused_lifetimes = { level = "warn", priority = -1 }
closure_returning_async_block = { level = "warn", priority = -1 }
redundant_imports = { level = "warn", priority = -1 }
missing_copy_implementations = { level = "warn", priority = -1 }
missing_debug_implementations = { level = "warn", priority = -1 }
trivial_casts = { level = "warn", priority = -1 }
ffi_unwind_calls = { level = "warn", priority = -1 }
unstable_features = { level = "warn", priority = -1 }
single_use_lifetimes = { level = "warn", priority = -1 }
meta_variable_misuse = { level = "warn", priority = -1 }
impl_trait_redundant_captures = { level = "warn", priority = -1 }
redundant_lifetimes = { level = "warn", priority = -1 }
variant_size_differences = { level = "warn", priority = -1 }
macro_use_extern_crate = { level = "warn", priority = -1 }
trivial_numeric_casts = { level = "warn", priority = -1 }
linker_messages = { level = "warn", priority = -1 }
unsafe_code = { level = "warn", priority = -1 }

# must_not_suspend = { level = "warn", priority = -1 }
# multiple_supertrait_upcastable = { level = "warn", priority = -1 }
# unused_results = { level = "warn", priority = -1 }
# supertrait_item_shadowing_definition = { level = "warn", priority = -1 }
# supertrait_item_shadowing_usage = { level = "warn", priority = -1 }
# unnameable_types = { level = "warn", priority = -1 }
# unqualified_local_imports = { level = "warn", priority = -1 }
# unreachable_pub = { level = "warn", priority = -1 }
# fuzzy_provenance_casts = { level = "warn", priority = -1 }
# missing_docs = { level = "warn", priority = -1 }
# lossy_provenance_casts = { level = "warn", priority = -1 }
# unused_crate_dependencies = { level = "warn", priority = -1 }
# non_exhaustive_omitted_patterns = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }
nursery = { level = "allow", priority = -1 }
cargo = { level = "warn", priority = -1 }

cargo_common_metadata = { level = "allow", priority = 0 }
missing_panics_doc = { level = "allow", priority = 0 }
missing_errors_doc = { level = "allow", priority = 0 }
cognitive_complexity = { level = "warn", priority = 0 }
large_stack_frames = { level = "warn", priority = 0 }
get_unwrap = { level = "allow", priority = 0 }
type_repetition_in_bounds = { level = "warn", priority = 0 }
missing_const_for_fn = { level = "warn", priority = 0 }

blanket_clippy_restriction_lints = { level = "allow", priority = 0 }
let_underscore_must_use = { level = "allow", priority = 0 }
let_underscore_untyped = { level = "allow", priority = 0 }
little_endian_bytes = { level = "allow", priority = 0 }
module_name_repetitions = { level = "allow", priority = 0 }
shadow_same = { level = "allow", priority = 0 }
panic = { level = "allow", priority = 0 }
semicolon_outside_block = { level = "allow", priority = 0 }
integer_division = { level = "allow", priority = 0 }
pub_use = { level = "allow", priority = 0 }
integer_division_remainder_used = { level = "allow", priority = 0 }
host_endian_bytes = { level = "allow", priority = 0 }
single_char_lifetime_names = { level = "allow", priority = 0 }
separated_literal_suffix = { level = "allow", priority = 0 }
unreachable = { level = "allow", priority = 0 }
shadow_reuse = { level = "allow", priority = 0 }
unwrap_used = { level = "allow", priority = 0 }
expect_used = { level = "allow", priority = 0 }
mod_module_files = { level = "allow", priority = 0 }
arithmetic_side_effects = { level = "allow", priority = 0 }
as_conversions = { level = "allow", priority = 0 }
missing_assert_message = { level = "allow", priority = 0 }
default_numeric_fallback = { level = "allow", priority = 0 }
allow_attributes_without_reason = { level = "allow", priority = 0 }
arbitrary_source_item_ordering = { level = "allow", priority = 0 }
min_ident_chars = { level = "allow", priority = 0 }
missing_docs_in_private_items = { level = "allow", priority = 0 }
panic_in_result_fn = { level = "allow", priority = 0 }
implicit_return = { level = "allow", priority = 0 }
absolute_paths = { level = "allow", priority = 0 }
question_mark_used = { level = "allow", priority = 0 }
std_instead_of_alloc = { level = "allow", priority = 0 }
single_call_fn = { level = "allow", priority = 0 }

[profile.release]
panic = 'abort'
