[workspace]
resolver = "3"
members = [
    "benches/misc/md5",
    "src",
    "src/bitstream/bitstream/decoder",
    "src/bitstream/bitstream/encoder",
    "src/bitstream/bitstreamcache",
    "src/bitstream/bitstreams",
    "src/bitstream/bitstreamslice",
    "src/bitstream/bytestream/decoder",
    "src/bitstream/bytestream/encoder",
    "src/bitstream/packedbitstreamslice",
    "src/bitstream/packedbitstreamunpacker",
    "src/codecs/packed/decoder",
    "src/codecs/packed/encoder",
    "src/common",
    "src/common/bit_manip",
    "src/common/bitseq",
    "src/common/exact_ops",
    "src/common/gcd",
    "src/common/generic_num",
    "src/common/lcm",
    "src/demuxers/packed",
    "src/demuxers/rawdemuxer",
    "src/memory",
    "src/memory/endianness",
    "src/memory/fixed_length_load",
    "src/memory/layoutfulbox",
    "src/memory/nd-slice-procurement",
    "src/memory/variable_length_load",
    "src/metadata/camerametadata",
    "src/metadata/camerasxml_parser",
    "src/metadata/colorfilterarray",
    "src/metadata/xmlparser",
    "src/metadata/xmltokendesparsifier",
    "src/metadata/xmltokenizer",
    "src/misc/md5",
    "src/parsers",
    "src/parsers/rawparser",
    "src/std",
    "src/std/ndslice",
    "src/utils/librstest",
    "src/utils/rstest",
    "tests/bitstream/bitstreams",
    "tests/metadata/camerasxml_parser",
]

[workspace.dependencies]
rawspeed-src = { path = "src" }
rawspeed-bitstream-bitstream-decoder = { path = "src/bitstream/bitstream/decoder" }
rawspeed-bitstream-bitstream-encoder = { path = "src/bitstream/bitstream/encoder" }
rawspeed-bitstream-bitstreamcache = { path = "src/bitstream/bitstreamcache" }
rawspeed-bitstream-bitstreams = { path = "src/bitstream/bitstreams" }
rawspeed-bitstream-bitstreamslice = { path = "src/bitstream/bitstreamslice" }
rawspeed-bitstream-bytestream-decoder = { path = "src/bitstream/bytestream/decoder" }
rawspeed-bitstream-bytestream-encoder = { path = "src/bitstream/bytestream/encoder" }
rawspeed-bitstream-packedbitstreamslice = { path = "src/bitstream/packedbitstreamslice" }
rawspeed-bitstream-packedbitstreamunpacker = { path = "src/bitstream/packedbitstreamunpacker" }
rawspeed-codecs-packed-decoder = { path = "src/codecs/packed/decoder" }
rawspeed-codecs-packed-encoder = { path = "src/codecs/packed/encoder" }
rawspeed-common = { path = "src/common" }
rawspeed-common-bit_manip = { path = "src/common/bit_manip" }
rawspeed-common-bitseq = { path = "src/common/bitseq" }
rawspeed-common-exact_ops = { path = "src/common/exact_ops" }
rawspeed-common-gcd = { path = "src/common/gcd" }
rawspeed-common-generic_num = { path = "src/common/generic_num" }
rawspeed-common-lcm = { path = "src/common/lcm" }
rawspeed-demuxers-packed = { path = "src/demuxers/packed" }
rawspeed-demuxers-rawdemuxer = { path = "src/demuxers/rawdemuxer" }
rawspeed-memory = { path = "src/memory" }
rawspeed-memory-endianness = { path = "src/memory/endianness" }
rawspeed-memory-fixed_length_load = { path = "src/memory/fixed_length_load" }
rawspeed-memory-layoutfulbox = { path = "src/memory/layoutfulbox" }
rawspeed-memory-nd_slice_procurement = { path = "src/memory/nd-slice-procurement" }
rawspeed-memory-variable_length_load = { path = "src/memory/variable_length_load" }
rawspeed-metadata-camerametadata = { path = "src/metadata/camerametadata" }
rawspeed-metadata-camerasxml_parser = { path = "src/metadata/camerasxml_parser" }
rawspeed-metadata-colorfilterarray = { path = "src/metadata/colorfilterarray" }
rawspeed-metadata-xmlparser = { path = "src/metadata/xmlparser" }
rawspeed-metadata-xmltokendesparsifier = { path = "src/metadata/xmltokendesparsifier" }
rawspeed-metadata-xmltokenizer = { path = "src/metadata/xmltokenizer" }
rawspeed-misc-md5 = { path = "src/misc/md5" }
rawspeed-parsers = { path = "src/parsers" }
rawspeed-parsers-rawparser = { path = "src/parsers/rawparser" }
rawspeed-std = { path = "src/std" }
rawspeed-std-ndslice = { path = "src/std/ndslice" }
rawspeed-utils-librstest = { path = "src/utils/librstest" }
rawspeed-utils-rstest = { path = "src/utils/rstest" }
criterion = { version = "0.8.2", default-features = false, features = [] }

[workspace.package]
version = "0.1.0"
authors = ["Roman Lebedev <lebedev.ri@gmail.com>"]
edition = "2024"
rust-version = "1.93"
documentation = "https://rawspeed.rs"
homepage = "https://rawspeed.rs"
repository = "https://github.com/darktable-org/rawspeed.rs"
license = "MIT OR Apache-2.0"

[profile.release]
panic = 'abort'

[profile.dev-sanitized]
inherits = "dev"
panic = 'unwind'

[profile.release-sanitized]
inherits = "release"
panic = 'unwind'

[workspace.lints.rust]
# Enable all lint groups provided by rustc:
warnings = { level = "warn", priority = -1 }
deprecated_safe = { level = "warn", priority = -1 }
future_incompatible = { level = "warn", priority = -1 }
keyword_idents = { level = "warn", priority = -1 }
let_underscore = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
refining_impl_trait = { level = "warn", priority = -1 }
rust_2018_compatibility = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }
unknown_or_malformed_diagnostic_attributes = { level = "warn", priority = -1 }
unused = { level = "warn", priority = -1 }

# Enable all lint checks provided by rustc, that are normally Allowed:
absolute_paths_not_starting_with_crate = { level = "warn", priority = -1 }
ambiguous_negative_literals = { level = "warn", priority = -1 }
closure_returning_async_block = { level = "warn", priority = -1 }
deprecated_in_future = { level = "warn", priority = -1 }
deprecated_safe_2024 = { level = "warn", priority = -1 }
deref_into_dyn_supertrait = { level = "warn", priority = -1 }
edition_2024_expr_fragment_specifier = { level = "warn", priority = -1 }
elided_lifetimes_in_paths = { level = "warn", priority = -1 }
explicit_outlives_requirements = { level = "warn", priority = -1 }
ffi_unwind_calls = { level = "warn", priority = -1 }
if_let_rescope = { level = "warn", priority = -1 }
impl_trait_overcaptures = { level = "warn", priority = -1 }
impl_trait_redundant_captures = { level = "warn", priority = -1 }
keyword_idents_2018 = { level = "warn", priority = -1 }
keyword_idents_2024 = { level = "warn", priority = -1 }
let_underscore_drop = { level = "warn", priority = -1 }
linker_messages = { level = "warn", priority = -1 }
macro_use_extern_crate = { level = "warn", priority = -1 }
meta_variable_misuse = { level = "warn", priority = -1 }
missing_copy_implementations = { level = "warn", priority = -1 }
missing_debug_implementations = { level = "warn", priority = -1 }
missing_unsafe_on_extern = { level = "warn", priority = -1 }
non_ascii_idents = { level = "warn", priority = -1 }
redundant_imports = { level = "warn", priority = -1 }
redundant_lifetimes = { level = "warn", priority = -1 }
rust_2021_incompatible_closure_captures = { level = "warn", priority = -1 }
rust_2021_incompatible_or_patterns = { level = "warn", priority = -1 }
rust_2021_prefixes_incompatible_syntax = { level = "warn", priority = -1 }
rust_2021_prelude_collisions = { level = "warn", priority = -1 }
rust_2024_guarded_string_incompatible_syntax = { level = "warn", priority = -1 }
rust_2024_incompatible_pat = { level = "warn", priority = -1 }
rust_2024_prelude_collisions = { level = "warn", priority = -1 }
single_use_lifetimes = { level = "warn", priority = -1 }
tail_expr_drop_order = { level = "warn", priority = -1 }
trivial_casts = { level = "warn", priority = -1 }
trivial_numeric_casts = { level = "warn", priority = -1 }
unit_bindings = { level = "warn", priority = -1 }
unsafe_attr_outside_unsafe = { level = "warn", priority = -1 }
unsafe_code = { level = "warn", priority = -1 }
unsafe_op_in_unsafe_fn = { level = "warn", priority = -1 }
unstable_features = { level = "warn", priority = -1 }
unused_import_braces = { level = "warn", priority = -1 }
unused_lifetimes = { level = "warn", priority = -1 }
unused_macro_rules = { level = "warn", priority = -1 }
unused_qualifications = { level = "warn", priority = -1 }
variant_size_differences = { level = "warn", priority = -1 }

# Allow lints that are still unstable
# fuzzy_provenance_casts = { level = "warn", priority = -1 }
# lossy_provenance_casts = { level = "warn", priority = -1 }
# multiple_supertrait_upcastable = { level = "warn", priority = -1 }
# must_not_suspend = { level = "warn", priority = -1 }
# non_exhaustive_omitted_patterns = { level = "warn", priority = -1 }
# resolving_to_items_shadowing_supertrait_items = { level = "warn", priority = -1 }
# shadowing_supertrait_items = { level = "warn", priority = -1 }
# unqualified_local_imports = { level = "warn", priority = -1 }

# Has false-positives with -Z build-std, therefore disabled.
# unused_crate_dependencies = { level = "warn", priority = -1 }
# unused_extern_crates = { level = "warn", priority = -1 }

# Allow lints that still trigger
# missing_docs = { level = "warn", priority = -1 }
# unnameable_types = { level = "warn", priority = -1 }
# unreachable_pub = { level = "warn", priority = -1 }
# unused_results = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }
nursery = { level = "allow", priority = -1 }
cargo = { level = "warn", priority = -1 }

cargo_common_metadata = { level = "allow", priority = 0 }
missing_panics_doc = { level = "allow", priority = 0 }
missing_errors_doc = { level = "allow", priority = 0 }
cognitive_complexity = { level = "warn", priority = 0 }
get_unwrap = { level = "allow", priority = 0 }
type_repetition_in_bounds = { level = "warn", priority = 0 }
missing_const_for_fn = { level = "warn", priority = 0 }

# FIXME: reenable after https://github.com/rust-lang/rust-clippy/issues/15099
large_stack_frames = { level = "allow", priority = 1 }

blanket_clippy_restriction_lints = { level = "allow", priority = 0 }
let_underscore_must_use = { level = "allow", priority = 0 }
let_underscore_untyped = { level = "allow", priority = 0 }
little_endian_bytes = { level = "allow", priority = 0 }
module_name_repetitions = { level = "allow", priority = 0 }
shadow_same = { level = "allow", priority = 0 }
panic = { level = "allow", priority = 0 }
semicolon_outside_block = { level = "allow", priority = 0 }
integer_division = { level = "allow", priority = 0 }
pub_use = { level = "allow", priority = 0 }
integer_division_remainder_used = { level = "allow", priority = 0 }
host_endian_bytes = { level = "allow", priority = 0 }
single_char_lifetime_names = { level = "allow", priority = 0 }
separated_literal_suffix = { level = "allow", priority = 0 }
unreachable = { level = "allow", priority = 0 }
shadow_reuse = { level = "allow", priority = 0 }
unwrap_used = { level = "allow", priority = 0 }
expect_used = { level = "allow", priority = 0 }
unwrap_in_result = { level = "allow", priority = 0 }
mod_module_files = { level = "allow", priority = 0 }
arithmetic_side_effects = { level = "allow", priority = 0 }
as_conversions = { level = "allow", priority = 0 }
missing_assert_message = { level = "allow", priority = 0 }
default_numeric_fallback = { level = "allow", priority = 0 }
allow_attributes_without_reason = { level = "allow", priority = 0 }
arbitrary_source_item_ordering = { level = "allow", priority = 0 }
min_ident_chars = { level = "allow", priority = 0 }
missing_docs_in_private_items = { level = "allow", priority = 0 }
panic_in_result_fn = { level = "allow", priority = 0 }
implicit_return = { level = "allow", priority = 0 }
absolute_paths = { level = "allow", priority = 0 }
question_mark_used = { level = "allow", priority = 0 }
std_instead_of_alloc = { level = "allow", priority = 0 }
single_call_fn = { level = "allow", priority = 0 }
trivially_copy_pass_by_ref = { level = "allow", priority = 0 }
pattern_type_mismatch = { level = "allow", priority = 0 }
pub_with_shorthand = { level = "allow", priority = 0 }
