[package]
name = "rawspeed-memory"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
rawspeed-memory-bitstream = { path = "bitstream" }
rawspeed-memory-endianness = { path = "endianness" }

[lib]
path = "memory.rs"
