[package]
name = "rawspeed-bench-md5"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dev-dependencies]
rawspeed-misc-md5 = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "rawspeed-bench-md5"
path = "mod.rs"
harness = false
