[package]
name = "rawspeed-bitstream-bitstreamcache"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rawspeed-common-bit_manip = { path = "../../common/bit_manip" }
rawspeed-common-generic_num = { path = "../../common/generic_num" }

[lib]
path = "mod.rs"
bench = false
