[package]
name = "rawspeed-bitstream-bitstreamposition"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rawspeed-bitstream-bitstreamslice = { workspace = true }

[dev-dependencies]
rawspeed-bitstream-bitstreams = { workspace = true }

[lib]
path = "mod.rs"
bench = false
