[package]
name = "rawspeed-bitstream-bitstreams"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rawspeed-bitstream-bitstreamcache = { workspace = true }
rawspeed-common-generic_num = { workspace = true }
rawspeed-memory-endianness = { workspace = true }

[lib]
path = "mod.rs"
bench = false
