[package]
name = "rawspeed-bitstream-bitstreamslice"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rawspeed-bitstream-bitstreams = { workspace = true }
rawspeed-common-exact_ops = { workspace = true }

[lib]
path = "mod.rs"
bench = false
