[package]
name = "rawspeed-bitstream-packedbitstreamslice"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rawspeed-bitstream-bitstreams = { path = "../bitstreams" }
rawspeed-bitstream-bitstreamslice = { path = "../bitstreamslice" }
rawspeed-common-lcm = { path = "../../common/lcm" }

[lib]
path = "mod.rs"
bench = false
