[package]
name = "rawspeed-bitstream-packedbitstream"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rawspeed-bitstream-bitstream-decoder = { path = "../bitstream/decoder" }
rawspeed-bitstream-bitstreamcache = { path = "../bitstreamcache" }
rawspeed-bitstream-bitstreams = { path = "../bitstreams" }
rawspeed-bitstream-bitstreamslice = { path = "../bitstreamslice" }
rawspeed-bitstream-packedbitstreamslice = { path = "../packedbitstreamslice" }

[lib]
path = "mod.rs"
bench = false
