[package]
name = "rawspeed-bitstream-packedbitstream"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rawspeed-bitstream-bitstream-decoder = { workspace = true }
rawspeed-bitstream-bitstreamcache = { workspace = true }
rawspeed-bitstream-bitstreams = { workspace = true }
rawspeed-bitstream-packedbitstreamslice = { workspace = true }
rawspeed-common-bitseq = { workspace = true }

[dev-dependencies]
rawspeed-bitstream-bitstreamslice = { workspace = true }

[lib]
path = "mod.rs"
bench = false
