[package]
name = "rawspeed-common-bitseq"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rawspeed-common-generic_num = { workspace = true }

[lib]
path = "mod.rs"
bench = false
