[package]
name = "rawspeed-common-lcm"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rawspeed-common-gcd = { path = "../gcd" }
rawspeed-common-generic_num = { path = "../generic_num" }
rawspeed-common-exact_ops = { path = "../exact_ops" }

[lib]
path = "mod.rs"
bench = false
