[package]
name = "rawspeed-common-lcm"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rawspeed-common-gcd = { workspace = true }
rawspeed-common-generic_num = { workspace = true }
rawspeed-common-exact_ops = { workspace = true }

[lib]
path = "mod.rs"
bench = false
