[package]
name = "rawspeed-demuxers-packed"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rawspeed-bitstream-bitstreams = { workspace = true }
rawspeed-codecs-packed-decoder = { workspace = true }
rawspeed-demuxers-rawdemuxer = { workspace = true }
rawspeed-memory-nd_slice_procurement = { workspace = true }
rawspeed-metadata-camerametadata = { workspace = true }
rawspeed-metadata-camerasxml_parser = { workspace = true }
rawspeed-std = { workspace = true }
rawspeed-std-ndslice = { workspace = true }
rawspeed-metadata-colorfilterarray = { workspace = true }

[dev-dependencies]
rawspeed-metadata-xmlparser = { workspace = true }

[lib]
path = "mod.rs"
bench = false
