[package]
name = "rawspeed-demuxers-rawdemuxer"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rawspeed-std = { path = "../../std" }
rawspeed-std-ndslice = { path = "../../std/ndslice" }

[lib]
path = "mod.rs"
