[package]
name = "rawspeed-memory-bitstreamcache"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
rawspeed-common = { path = "../../common" }

[lib]
path = "mod.rs"
