[package]
name = "rawspeed-memory-bitstreamer"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rawspeed-common = { path = "../../common" }
rawspeed-memory-bitstream = { path = "../bitstream" }
rawspeed-memory-endianness = { path = "../endianness" }
rawspeed-memory-bitstreamcache = { path = "../bitstreamcache" }
rawspeed-memory-variable_length_load = { path = "../variable_length_load" }
rawspeed-memory-fixed_length_load = { path = "../fixed_length_load" }

[lib]
path = "mod.rs"
