[package]
name = "rawspeed-memory-bytestreamer"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rawspeed-common = { path = "../../common" }
rawspeed-memory-endianness = { path = "../endianness" }
rawspeed-memory-fixed_length_load = { path = "../fixed_length_load" }

[lib]
path = "mod.rs"
