[package]
name = "rawspeed-memory-fixed_length_load"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]

[lib]
path = "mod.rs"
