[package]
name = "rawspeed-memory-layoutfulbox"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]

[dev-dependencies]
rawspeed-std = { path = "../../std" }
rawspeed-common-exact_ops = { path = "../../common/exact_ops" }

[lib]
path = "mod.rs"
