[package]
name = "rawspeed-memory-nd_slice_procurement"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rawspeed-memory-layoutfulbox = { path = "../layoutfulbox" }
rawspeed-std = { path = "../../std" }
rawspeed-std-ndslice = { path = "../../std/ndslice" }
rawspeed-common-exact_ops = { path = "../../common/exact_ops" }

[lib]
path = "mod.rs"
