[package]
name = "rawspeed-memory-nd_slice_procurement"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rawspeed-memory-layoutfulbox = { workspace = true }
rawspeed-std = { workspace = true }
rawspeed-std-ndslice = { workspace = true }

[dev-dependencies]
rawspeed-common-exact_ops = { workspace = true }

[lib]
path = "mod.rs"
bench = false
