[package]
name = "rawspeed-metadata-camerasxml_parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rawspeed-metadata-xmlparser = { path = "../xmlparser" }
rawspeed-std = { path = "../../std" }

[dev-dependencies]

[lib]
path = "mod.rs"
